<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="299dp"
        android:layout_height="590dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419">

        <ImageView
            android:id="@+id/ivGatito"
            android:layout_width="289dp"
            android:layout_height="301dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/gato"

            />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvTitle" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="332dp"
            android:layout_height="48dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/etNombreMascota" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="98dp">


            <RadioButton
                android:id="@+id/rbGatito"
                android:layout_width="359dp"
                android:layout_height="wrap_content"

                android:text="@string/rgGato" />

            <RadioButton
                android:id="@+id/rbPerrito"
                android:layout_width="359dp"
                android:layout_height="wrap_content"

                android:text="@string/rgPerro" />
        </RadioGroup>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="358dp"
            android:layout_height="53dp"
            android:gravity="center"

            android:onClick="totalPago"


            android:text="@string/btnRegistrar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>